--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -6,6 +6,6 @@ COOKIE_EXPIRE = 7
 SMPT_SERVICE = "gmail"
 SMPT_MAIL = "tes27769@gmail.com"
 SMPT_PASSWORD = 2778@tes
-CLOUDINARY_NAME = xyz
-CLOUDINARY_API_KEY = abc
-CLOUDINARY_API_SECRET = pqr
+CLOUDINARY_NAME = dqaonrhht
+CLOUDINARY_API_KEY = 445633392417126
+CLOUDINARY_API_SECRET = 68ByLZ_Xcd9mW5qot8jrzsLVtkg
